fixed same bug where form would disappear soon after loading on mobile

--- a/contactStyle.css
+++ b/contactStyle.css
@@ -62,7 +62,6 @@
     form {
         margin-top: 0em;
 	margin-left: 0em;
-	opacity: 0;
     }
 
     form label {
